--- a/sifnew.html
+++ b/sifnew.html
@@ -19,7 +19,7 @@
 <li>-나미콩쿠르와 남이섬의 행사에 대해 비교적 많은 지식을 가지고 있음</li>
 <li>-SIF의 협찬사로는 그라폴리오, 후원사로는 정부단체와 기관으로 함</li>
 <li>-그라폴리오는 5천만원 상당의 홍보를 대행해주고 있으며 부스 참여하고 있음</li>
-<li>-나미콩쿠르가 협찬사로서 어떤 역할을 하고 있는지 의문, 모호하다고 생각 함</li>
+<li>-나미콩쿠르가 협찬사로서 어떤 역할을 할수있는지 의문, 모호하다고 생각 함</li>
 </ul>
 <p>
 </body>
